# orchestration-accelerator-framework

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: phase1_architecture.md
scripts/: test_gateway_connection.py
src/orchestrator/: config.py
src/orchestrator/cli/: main.py
src/orchestrator/deployment/: stepfunctions.py
src/orchestrator/indexing/: gateway_client.py  vectorstore.py
src/orchestrator/ingestion/: chunker.py  loader.py
src/orchestrator/retrieval/: retriever.py
src/orchestrator/synthesis/: asl_generator.py  planner.py  validator.py
tests/: test_placeholder.py
