[project]
name = "orchestration-accelerator"
version = "0.1.0"
description = "RAG-powered assistant that generates and deploys AWS Step Functions from repository context (Phase 1)."
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
orchestrator = "orchestrator.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
